fix mistakes, update some tests to reflect design changes, add given example as integration test